QQ buffs Ottoman claim on constan

--- a/localisation/spot_l_english.yml
+++ b/localisation/spot_l_english.yml
@@ -451,3 +451,24 @@
  IND_ideas:0 "Indian Ideas"
  IND_ideas_start:0 "Indian Traditions"
  IND_ideas_bonus:0 "Indian Ambition"
+ KRD_ideas:0 "Kurdish Ideas"
+ KRD_ideas_start:0 "Kurdish Traditions"
+ KRD_ideas_bonus:0 "Kurdish Ambition"
+ KRD_1:0 "Mountain Foundries"
+ KRD_2:0 "Kurdish Discipline"
+ KRD_3:0 "Blast Charges"
+ KRD_4:0 "Kurdish Loyalty"
+ KRD_5:0 "KLF"
+ KRD_6:0 "Death to turks"
+ KRD_7:0 "Halls in Tabriz"
+ KRD_1_desc:0 ""
+ KRD_2_desc:0 ""
+ KRD_3_desc:0 ""
+ KRD_4_desc:0 ""
+ KRD_5_desc:0 ""
+ KRD_6_desc:0 ""
+ KRD_7_desc:0 ""
+ kurdish_nation_title:0 "Unite Mountain Mutts"
+ kurdish_nation_desc:0 "The KLF needs something to rally behind."
+ KRD: "Kurdistan"
+ KRD_ADJ: "Kurdish"
