--- a/localisation/spot_l_english.yml
+++ b/localisation/spot_l_english.yml
@@ -472,3 +472,10 @@
  kurdish_nation_desc:0 "The KLF needs something to rally behind."
  KRD: "Kurdistan"
  KRD_ADJ: "Kurdish"
+ h_ruler_tutor_title:0 "Educate Ruler"
+ h_ruler_tutor_desc:0 "Our ruler is somewhat unsuited to the task of ruling our country. Utilize our limited resources to teach them the art of governance."
+ h_ruler_tutor_tooltip:0 "Ruler has less than 7 total skill"
+ h_krd_mission_5_title:0 "Fortify the Oases"
+ h_krd_mission_5_desc:0 "The Oases of Najd are crucial to the centralization of our growing Arabian empire. We will establish a permanent foothold in the area with the construction of walled oasis towns."
+ h_krd_mission_6_title:0 "Conquer Persia"
+ h_krd_mission_6_desc:0 "You must conquer Persia to solidfy Kurdistan as a great power"
