--- a/localisation/spot_l_english.yml
+++ b/localisation/spot_l_english.yml
@@ -472,3 +472,24 @@
  kurdish_nation_desc:0 "The KLF needs something to rally behind."
  KRD: "Kurdistan"
  KRD_ADJ: "Kurdish"
+ SOV_ideas:0 "Soviet Ideas"
+ SOV_ideas_start:0 "Soviet Traditions"
+ SOV_ideas_bonus:0 "Soviet Ambition"
+ SOV_1:0 "Communist Ideals"
+ SOV_2:0 "Sacred War"
+ SOV_3:0 "Every Man a Bunker"
+ SOV_4:0 "Kalinka"
+ SOV_5:0 "Stalinism"
+ SOV_6:0 "Permanent Revolution"
+ SOV_7:0 "NVKD"
+ SOV_1_desc:0 ""
+ SOV_2_desc:0 ""
+ SOV_3_desc:0 ""
+ SOV_4_desc:0 ""
+ SOV_5_desc:0 ""
+ SOV_6_desc:0 ""
+ SOV_7_desc:0 ""
+ soviet-union_nation_title:0 "Seize The Means Of Production"
+ soviet-union_nation_desc:0 "Rights to the Worker"
+ SOV: "Soviet Union"
+ SOV_ADJ: "Soviet"
